--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@vue/composition-api": "^1.4.0-beta.0",
 		"autoprefixer": "^9",
 		"core-js": "^3.6.5",
+		"highcharts": "^9.3.1",
+		"highcharts-vue": "^1.4.0",
 		"postcss": "^7",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
 		"vue": "^2.6.11"
