--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
 	"dependencies": {
 		"@tailwindcss/postcss7-compat": "^2.2.17",
 		"@vue/composition-api": "^1.4.0-beta.0",
+		"apexcharts": "^3.29.0",
 		"autoprefixer": "^9",
 		"core-js": "^3.6.5",
-		"apexcharts": "^3.29.0",
-		"vue-apexcharts": "^1.6.2",
 		"postcss": "^7",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-		"vue": "^2.6.11"
+		"vue": "^2.6.11",
+		"vue-apexcharts": "^1.6.2",
+		"vue-select": "^3.16.0"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
